--- a/package.json
+++ b/package.json
@@ -1,13 +1,14 @@
 {
   "dependencies": {
     "axios": "^1.5.1",
+    "jest": "^29.7.0",
     "puppeteer": "^21.3.6"
   },
   "name": "buscaimoveis-scraper",
   "version": "1.0.0",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "test": "jest",
     "start": "node index.js"
   },
   "keywords": [],
